Fixed Selected not showing up issues

--- a/styles/shows.scss
+++ b/styles/shows.scss
@@ -143,7 +143,7 @@
     font-weight: 500;
   }
 
-  &.shows__container.selected {
+  &__container.selected {
     background-color: #e1e1e1;
   }
   &__container:not(.selected):hover {
